# simulado-streamlit

./: .gitignore  pyproject.toml  requirements.txt
app/: app.py
app/data/: primeiro modelo deep.json  questions_bank.json  questions_example.json  questoes portugues.json  simulado administracao publica.json  simulado completo auditor tce.json  simulado controle externo.json  simulado de auditoria governamental.json  simulado de auditoria.json  simulado de contabilidade e economa.json  simulado de contabilidade geral.json  simulado de contabilidade publica.json  simulado de direito administrativo II.json  simulado de direito administrativo.json  simulado de direito civil.json  simulado de direito financeiro II.json  simulado de direito financeiro.json  simulado de direito previdenciario e avaliacao atuarial.json  simulado de direito processual civil.json  simulado de nocoes de analise de dados e ia.json  simulado de nocoes de direito penal.json  simulado de nocoes de direito tributario.json  simulado direito constitucional.json  simulado direito especifico e mat.json  simulado estatistica.json  simulado nocoes de contabilidade publica.json  simulado portugues.json  slmulado direito geral.json
app/database/: db_handler.py  messages.json  results.json  users.json
app/src/: app.py
app/src/utils/: json_validator.py
app/utils/: auth.py
app/views/: 0_Pagina_Inicial.py  1_Novo_Simulado.py  2_Historico_de_Resultados.py  3_Administracao.py  administracao.py  historico.py  novo_simulado.py  pagina_inicial.py
old/: app.v1.py  app.v2.py  test_json_validator.py
